--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crystal Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 
 </head>
 <body>
@@ -31,7 +33,34 @@
         </ul>
     </div>
 
+    <div class="numberToMatch">
+		<h2>Number To Get:
+			<span id= "randomNumber"></span>
+		</h2>
+	</div>
+	<div class="winsAndLosses">
+		<h2>Wins:
+			<span id= "numberWins"></span>
+			</br>
+			Losses: 
+			<span id= "numberLosses"></span>
+		</h2>
+    </div>
     
-   
+    <div class="gems">
+		<img src="assets/images/blue_crystal.png" class=gemImage id="one" alt="Blue Gem">
+		<img src="assets/images/green_crystal.png" class=gemImage id="two" alt="Green Gem">
+		<img src="assets/images/red_crystal.png" class=gemImage id= "three" alt="Red Gem">
+		<img src="assets/images/yellow_crystal.png" class=gemImage id= "four" alt="Yellow Gem">
+    </div>
+    
+    <div class="userTotal">
+		<h2>Your total score is:
+			<span id="finalTotal"></span>
+		</h2>
+	</div>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
